# video-capture

./: Cargo.toml  README.md  rustfmt.toml
examples/: camera.rs
src/: camera.rs  device.rs  error.rs  lib.rs
src/mac/: av_foundation.rs  mod.rs
src/windows/: media_foundation.rs  mod.rs
